// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Link with href attribute should render correctly 1`] = `
=======
exports[`Link should render correctly 1`] = `
>>>>>>> Adding a Jest.config file"
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-activeItem-1 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;
<<<<<<< HEAD
=======

exports[`Link with href attribute should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root makeStyles-activeItem-22 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
>>>>>>> Adding a Jest.config file"
